# ginacsym

./: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  README.md  acinclude.m4  aclocal.m4  configure  configure.ac  ginacsym.pc  ginacsym.pc.in
check/: Makefile.am  Makefile.in  check_inifcns.cpp  check_lsolve.cpp  check_matrices.cpp  check_numeric.cpp  exam_archive.cpp  exam_chinrem_gcd.cpp  exam_clifford.cpp  exam_collect.cpp  exam_collect_common_factors.cpp  exam_color.cpp  exam_differentiation.cpp  exam_factor.cpp  exam_function_exvector.cpp  exam_heur_gcd.cpp  exam_indexed.cpp  exam_inifcns.cpp  exam_inifcns_elliptic.cpp  exam_inifcns_nstdsums.cpp  exam_lsolve.cpp  exam_match.cpp  exam_matrices.cpp  exam_misc.cpp  exam_mod_gcd.cpp  exam_normalization.cpp  exam_numeric.cpp  exam_paranoia.cpp  exam_parser.cpp  exam_pgcd.cpp  exam_polygcd.cpp  exam_powerlaws.cpp  exam_pseries.cpp  exam_real_imag.cpp  exam_relational.cpp  exam_sqrfree.cpp  exam_structure.cpp  genex.cpp  randomize_serials.cpp  test_runner.h  (+25 more)
config/: config.h.in
doc/html/: index.html
ginacsym/: Makefile.am  Makefile.in  add.cpp  archive.cpp  basic.cpp  clifford.cpp  color.cpp  constant.cpp  ex.cpp  expair.cpp  expairseq.cpp  exprseq.cpp  factor.cpp  fail.cpp  fderivative.cpp  function.cpp  functions.cpp  ginacwrapper.cpp  hash_seed.h  idx.cpp  indexed.cpp  inert.cpp  infinity.cpp  inifcns.cpp  inifcns_elliptic.cpp  inifcns_gamma.cpp  inifcns_hyperb.cpp  inifcns_integral.cpp  inifcns_nstdsums.cpp  inifcns_special.cpp  inifcns_trans.cpp  inifcns_trig.cpp  integral.cpp  integrate.cpp  integration_kernel.cpp  limit.cpp  lst.cpp  map_function.cpp  matrix.cpp  mul.cpp  (+21 more)
ginacsym/parser/: debug.h  default_reader.cpp  lexer.cpp  lexer.h  parse_binop_rhs.cpp  parse_context.cpp  parser.cpp  parser_compat.cpp
ginacsym/polynomial/: chinrem_gcd.cpp  chinrem_gcd.h  collect_vargs.cpp  collect_vargs.h  cra_garner.cpp  cra_garner.h  debug.h  divide_in_z_p.cpp  divide_in_z_p.h  euclid_gcd_wrap.h  eval_point_finder.h  eval_uvar.h  gcd_euclid.h  gcd_uvar.cpp  heur_gcd_uvar.h  interpolate_padic_uvar.h  mgcd.cpp  mod_gcd.cpp  mod_gcd.h  newton_interpolate.h  normalize.cpp  normalize.h  optimal_vars_finder.cpp  optimal_vars_finder.h  pgcd.cpp  pgcd.h  poly_cra.h  prem_uvar.h  primes_factory.h  primpart_content.cpp  remainder.cpp  remainder.h  ring_traits.h  smod_helpers.h  sr_gcd_uvar.h  upoly.h  upoly_io.cpp  upoly_io.h
